[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "algorithmics"
version = "0.0.1"
description = "A collection of algorithms and data structures."
authors = [
  { name = "user", email = "user@example.com" }
]

[tool.setuptools.packages.find]
where = ["src"]